website/versioned_docs/version-0.1.0-alpha/development/headless-styles/Input.mdx
---
tags: [Development, Packages, Components, Headless Styles, Input]
---

<!-- TODO: As of 2.0.0-beta.17 live-codeblock do not support imports. -->
<!-- Keep an eye out so we can kill the components we are importing in. -->
<!-- https://docusaurus.io/docs/markdown-features/code-blocks#imports -->

import CodeBlock from '@theme/CodeBlock'
import BasicInput from '@site/src/components/Input/BasicInput'
import {
  BasicInputPreview,
  BasicInputFullPreview,
} from '@site/src/components/Input/BasicInput.preview'
import InputSizes from '@site/src/components/Input/InputSizes'
import {
  InputSizesPreview,
  InputSizesFullPreview,
} from '@site/src/components/Input/InputSizes.preview'
import PasswordInput from '@site/src/components/Input/PasswordInput'
import ViewSourceLink from '@site/src/components/ViewSourceLink/ViewSourceLink'
import LiveExampleTabs from '@site/src/components/LiveExampleTabs/LiveExampleTabs'

The `getInputProps` helper is used to get user input in a text-like field.

<ViewSourceLink
  icon="github"
  href="https://github.com/pluralsight/pando/tree/main/packages/headless-styles/src/components/Input"
>
  View source
</ViewSourceLink>

## Import

```javascript
import { getInputProps } from '@pluralsight/headless-styles'
```

## Usage

### Basic Input

<BasicInput />
<LiveExampleTabs
  fullCode={<BasicInputFullPreview />}
  sandboxList={{
    chakra: 'ps-react-chakra-5of7jo',
    joy: 'basic-mui-wjvohy',
    styled: 'sc-qeofuk',
    svelte: 'ps-svelte-o1yfdy',
  }}
>
  <BasicInputPreview />
</LiveExampleTabs>

### Sizes

The `getInputProps` helper comes with two sizes: `m` and `l` (default).

<InputSizes />
<LiveExampleTabs
  fullCode={<InputSizesFullPreview />}
  sandboxList={{
    chakra: 'ps-react-chakra-5of7jo',
    joy: 'basic-mui-wjvohy',
    styled: 'sc-qeofuk',
    svelte: 'ps-svelte-o1yfdy',
  }}
>
  <InputSizesPreview />
</LiveExampleTabs>

### Password Input Example

You can combine helpers to create a password input with show/hide functionality:

<PasswordInput />

```javascript
import { useState } from 'react'
import {
  getButtonProps,
  getFormControlProps,
  getIconProps,
  getInputProps,
} from '@pluralsight/headless-styles'
import { EyeIcon, EyeOffIcon } from '@pluralsight/icons'

const btnStyle = {
  position: 'absolute',
  right: '0.3rem',
  top: '12px',
  zIndex: '100',
}

function PasswordInput() {
  const [show, setShow] = useState(false)
  const [password, setPassword] = useState('')
  const { fieldOptions } = getFormControlProps()
  const inputProps = getInputProps({
    ...fieldOptions,
    id: 'password',
    name: 'user_password',
    placeholder: 'Basic input',
    type: show ? 'text' : 'password',
    value: password,
  })

  function handleChange(e) {
    setPassword(e.target.value)
  }

  function handleToggleShow() {
    setShow((prev) => !prev)
  }

  return (
    <div {...inputProps.inputWrapper}>
      <input {...inputProps.input} onChange={handleChange} />
      <button {...getButtonProps({ kind: 'weak', size: 's' })} style={btnStyle}>
        <span {...getIconProps({ size: 'm' })} onClick={handleToggleShow}>
          {show ? <EyeIcon /> : <EyeOffIcon />}
        </span>
      </button>
    </div>
  )
}

export default PasswordInput
```

## Accessibility and messages

When displaying [Error Messages](./FormControl.mdx#error-messasge) or [Help Text](./FormControl.mdx#help-text) it is required to pass the `options.id` value to the `InputOptions.describedBy` field. This will add a [aria-describedby](https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Attributes/aria-describedby) attribute to the `input` which establishes a relationship between the `input` and message you are displaying.

:::danger

Not providing a `describedBy` option that matches the Error/Field Message `id` will result in a poor accessbility experience. Please make sure you are using both of these in order to provide the best experience to all of your users.

:::

### Using both error & field messages

When using both the field message and error message API, pass a comma-separated String to the `InputOptions.describedBy` option.

```javascript title="Example using both messages for an input"
const { value: helpText, ...message } = getFieldMessageProps({
  id: 'email:help',
  message: 'We will never share your email.',
})
const error = getErrorMessageProps({
  id: 'bad:email',
  invalid,
  message: 'An email address is required.',
})
const inputProps = getInputProps({
  ...fieldOptions,
  // highlight-next-line
  describedBy: `${message.id},${error.container.id}`,
  id: 'email',
  name: 'user_email',
  value,
})
```

## API

| Name              | Argument Type                              | Default         | Description                     |
| ----------------- | ------------------------------------------ | --------------- | ------------------------------- |
| `getInputProps`   | **options**: [InputOptions](#inputoptions) | **size**: 'l'   | Get input styles for CSS usage. |
| `getJSInputProps` | **options**: [InputOptions](#inputoptions) | same as CSS API | CSS-in-JS API                   |

## Options

### InputOptions

This interface is available as an `import` for use.

```typescript
interface InputOptions extends FieldOptions {
  describedBy?: string
  id: string
  name: string
  placeholder: string
  size?: 'm' | 'l'
  tech?: 'svelte'
  type: 'text' | 'email' | 'password' | 'tel' | 'url'
  value: string
}
```

```typescript title="Import example"
import type { InputOptions } from '@pluralsight/headless-styles/types'
```

### FieldOptions

```typescript
interface FieldOptions {
  disabled?: boolean
  invalid?: boolean
  readOnly?: boolean
  required?: boolean
}
```

## Props

### InputProps

```typescript
interface InputProps {
  iconOptions: {
    ariaHidden: boolean
    ariaLabel: string
    size: string
    tech: string
  }
  iconWrapper: {
    'aria-invalid': boolean
    className: string
  }
  input: {
    'aria-describedby': string
    'aria-invalid': boolean
    'data-disabled': boolean
    'data-invalid': boolean
    'data-readonly': boolean
    'data-required': boolean
    className: string
    disabled: boolean
    id: string
    name: string
    placeholder: string
    readOnly: boolean
    required: boolean
    type: string
    value: string
  }
  inputWrapper: {
    className: string
  }
}
```

### JSInputProps

```typescript
interface JSInputProps {
  iconOptions: {
    ariaHidden: boolean
    ariaLabel: string
    size: string
    tech: string
  }
  iconWrapper: {
    a11yProps: {
      'data-invalid': boolean
    }
    styles: Record<string, unknown>
    cssProps: TemplateLiteralString
  }
  input: {
    a11yProps: {
      'aria-describedby': string
      'aria-invalid': boolean
      'data-disabled': boolean
      'data-invalid': boolean
      'data-readonly': boolean
      'data-required': boolean
      disabled: boolean
      id: string
      name: string
      placeholder: string
      readOnly: boolean
      required: boolean
      type: string
      value: string
    }
    styles: Record<string, unknown>
    cssProps: TemplateLiteralString
  }
  inputWrapper: {
    styles: Record<string, unknown>
    cssProps: TemplateLiteralString
  }
}
```
